--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # directory
-auth3/*/__pycache__/
-auth3/*/migrations/
+back_web/*/__pycache__/
+back_web/*/migrations/
+back_web/back_web/settings/__pycache__/
 
 # files
-auth3/db.sqlite3
+back_web/db.sqlite3
 
