--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ back_web/*/__pycache__/
 back_web/*/migrations/
 back_web/back_web/settings/__pycache__/
 venv/
+data/
 
 # files
 back_web/db.sqlite3
