--- a/back_web/Dockerfile
+++ b/back_web/Dockerfile
@@ -1,5 +1,6 @@
 # version
 FROM python:3.11.6
+ENV PYTHONBUFFERED=1
 
 # env
 ENV APP=myapp
@@ -9,7 +10,8 @@ WORKDIR /${APP}
 
 # copy
 RUN pip install --upgrade pip
-COPY requirements.txt /${APP}/
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
+# confirm if that is needed
 COPY . /${APP}/
