--- a/back_web/docker-compose-dev.yml
+++ b/back_web/docker-compose-dev.yml
@@ -1,21 +1,64 @@
+version: "3.8"
 services:
+
+  redis:
+    image: "redis:alpine"
+    command: --port 63790
+    container_name: redis
+    restart: always
+    # ports:
+    #   - "63790:6379"
 
   web:
     build: .
-    command: python /myapp/back_web/manage.py runserver 0.0.0.0:8000
+    container_name: myapp
+    command: ["bash", "-c", " python manage.py migrate
+      && python manage.py runserver 0.0.0.0:8000"]
     restart: always
     volumes:
       - .:/myapp
     ports:
       - "8000:8000"
     environment:
-      - mode=dev
+      - mode=local
+      - REDIS_HOST=redis
+      - REDIS_PORT=63790
+    depends_on:
+      - redis
+     
+  celery:
+    build: .
+    container_name: celery
+    command: ["bash", "-c", "celery -A back_web worker --loglevel=info"]
+    volumes:
+      - .:/myapp
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=63790
+    depends_on:
+      - web
+      - redis
+
+  celery_beat:
+    build: .
+    container_name: celery_beat
+    command: ["bash", "-c", "celery -A back_web beat --loglevel=info"]
+    volumes:
+      - .:/myapp
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=63790
+    depends_on:
+      - web
+      - redis
 
   nginx:
-    image: nginx:1.25.3
+    image: nginx
+    container_name: nginx
     restart: always
     volumes:
       - ./config/nginx/local:/etc/nginx/template
-      - .:/myapp
+      - .:/myapp/
     ports:
       - "80:80"
+
