--- a/back_web/docker-compose.yml
+++ b/back_web/docker-compose.yml
@@ -3,11 +3,8 @@ services:
 
   redis:
     image: "redis:alpine"
-    command: --port 63790
     container_name: redis
     restart: always
-    # ports:
-    #   - "63790:6379"
 
   web:
     build: .
@@ -22,11 +19,10 @@ services:
     environment:
       - mode=local
       - REDIS_HOST=redis
-      - REDIS_PORT=63790
+      - REDIS_PORT=6379
     depends_on:
       - redis
      
-
   celery:
     build: .
     container_name: celery
@@ -35,7 +31,20 @@ services:
       - .:/myapp
     environment:
       - REDIS_HOST=redis
-      - REDIS_PORT=63790
+      - REDIS_PORT=6379
+    depends_on:
+      - web
+      - redis
+
+  celery_beat:
+    build: .
+    container_name: celery_beat
+    command: ["bash", "-c", "celery -A back_web beat --loglevel=info"]
+    volumes:
+      - .:/myapp
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       - web
       - redis
